# votale

./: README.md  alembic.ini  pyproject.toml
src/: ioc.py  main.py
src/core/: interfaces.py  schemas.py  types.py
src/core/config/: scenarios.py  settings.py
src/core/engine/: poll_manager.py  prompt_manager.py  publication_manager.py  scenario_manager.py  state_manager.py
src/core/infra/db/: database.py  transaction_manager.py
src/core/infra/db/models/: message.py  mixins.py  poll.py  scenario.py
src/core/infra/migrations/: env.py
src/core/infra/migrations/versions/: 2aebb1e83c40_add_scenario_states_table.py  374512e8c82c_add_poll_tables.py  7611f78d0fe2_remove_chat_id_field_from_messageg_table.py  7bb4a69f447b_add_poll_results_table.py  804ff9532c62_init_migration.py  82ab3217e86b_add_messages_table.py  e97c29d4cd41_add_scenario_messages_table.py  f5f306c704d2_change_schema_poll_results_table.py
src/core/infra/repositories/: message.py  poll.py  scenario.py  scenario_state.py
src/core/integrations/: gemini.py  telegram.py
src/scenarios/astrocatcoin/: prompt.yaml  scenario.py  schemas.py
